@@ -977,7 +977,7 @@ public class OptWnd extends WindowX {
 	panel.add(new CFGBox("Container decal pickup protection", CFG.DECAL_SHIFT_PICKUP, "Require holding CTRL or SHIFT to pickup decals placed on containers."), new Coord(x, y));
     
 	y += STEP;
-	panel.add(new CFGBox("Enable path queueing", CFG.QUEUE_PATHS, "SHIFT+LClick will queue movement"), x, y);
+	panel.add(new CFGBox("Enable path queueing", CFG.QUEUE_PATHS, "ALT+LClick in world or on minimap will queue movement"), x, y);
     
 	y += STEP;
 	Coord tsz = panel.add(new Label("Default speed:"), x, y).sz;
